# RandoTracker

./: .gitignore  .gitmodules  CMakeLists.txt  Clickable.cpp  Clickable.h  FileOpen.cpp  FileOpen.h  README.md  Tab.cpp  Tab.h  build.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  make.sh  run.sh
source/: Clickable.cpp  FileOpen.cpp  FileOpen.h  Tab.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tracker_files/: fail.json  ocarina_of_time.json  ocarina_of_time_2.json
